--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,18 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.0
+  hive_flutter: ^1.1.0
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  cloud_firestore: ^5.3.0
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.4.0
+  hive: ^2.0.0
+  hive_generator: ^2.0.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
