--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_auth: ^5.2.0
   cloud_firestore: ^5.3.0
   workmanager: ^0.5.2
+  fluttertoast: ^8.2.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
